--- a/appsettings.json
+++ b/appsettings.json
@@ -10,5 +10,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MailSettings": {
+    "Mail": "mark.zilkovskyi@gmail.com",
+    "Display": "Mark",
+    "Password": "hvyxucdltxzdxdeh",
+    "Host": "smtp.gmail.com",
+    "Port": 587
+  },
+  "DefaultUserImage": "default-user-image.jpg"
 }
