--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-TheBlogProject-D0845CE9-5E0D-4793-90A0-97867B06F2C9;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "DefaultConnection": "Server=localhost; Port=5432; Database=TheBlogProject; User Id=postgres; Password=Dina1966."
+    "DefaultConnection": "Server=localhost; Port=5432; Database=TheBlogProject2; User Id=postgres; Password=Dina1966."
   },
   "Logging": {
     "LogLevel": {
